--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
   </div><div id="instructions">
     <h2>Instructions</h2>
-    <p>Use the arrow keys to move the character around the screen. Avoid obstacles and collect items to earn points!</p>
+    <p>Use the arrow keys to move the character around the screen. Attack and doge the slimes to survive!</p>
   </div>
 
   <script src="https://cdn.jsdelivr.net/gh/eligrey/FileSaver.js/dist/FileSaver.min.js"></script>
